# notification_hub-FastAPI

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  mypy_validate.py  pyproject.toml
.github/workflows/: ci.yaml
src/notif_hub/: alembic.ini  basemodels.py  config.py  main.py
src/notif_hub/alembic/: env.py
src/notif_hub/alembic/versions/: 126c43960b06_обновление_удалена_строка_payload_из_.py  2c8fa6ec251d_добавление_добавлена_модель_chat_id.py  8b1433a6dd80_добавление_добавлена_модель_refresh_.py  a376257d9666_обновление_добавлен_параметр_timezone_.py  eeb8cd31567e_добавление_добавлено_поле_recipient_с_.py  f21fecc018c5_добавление_добавлены_модели_user_и_.py
src/notif_hub/api/: __init__.py  channels_handler.py  channels_helpers.py  email_handler.py  email_helpers.py  exceptions.py  telegram_handler.py  texts.py  webhook_handler.py
src/notif_hub/auth/: __init__.py  exceptions.py  github_router.py  google_router.py  jwt_parse.py  oauth_github.py  oauth_google.py  router.py
src/notif_hub/auth/cookie_auth/: auth.py  helpers.py  schemas.py  utils.py  validation.py
src/notif_hub/bot/: __init__.py  bot.py  router.py  texts.py
src/notif_hub/certs/: jwt-private.pem  jwt-public.pem  server.crt  server.key
src/notif_hub/database/: database.py  managers.py  models.py
src/notif_hub/templates/: __init__.py  about_us.html  authenticated.html  base.html  login.html  notifications.html  register.html  router.py
tests/: test_main.py
