[project]
name = "notif-hub"
version = "0.1.1"
description = "a centralized service that accepts events, or requests to send notifications, and delivers them to users through one or more channels"
authors = [
    {name = "inksne",email = "vitalijjapr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pytest[asyncio] (>=9.0.2,<10.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "sqlalchemy[asyncio] (>=2.0.45,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "notif_hub", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
