[project]
name = "notif-hub"
version = "0.1.16"
description = "A centralized service that accepts events, or requests to send notifications, and delivers them to users through one or more channels"
authors = [
    {name = "inksne", email = "vitalijjapr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pytest[asyncio] (>=9.0.2,<10.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "sqlalchemy[asyncio] (>=2.0.45,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "aiogram (>=3.24.0,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "aiosmtplib (>=5.0.0,<6.0.0)",
    "pyjwt[crypto] (>=2.10.1,<3.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
]

[tool.poetry]
packages = [{include = "notif_hub", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
fastapi = ">=0.128.0,<0.129.0"
mypy = ">=1.19.1,<2.0.0"
pytest = {extras = ["asyncio"], version = ">=9.0.2,<10.0.0"}
asyncpg = ">=0.31.0,<0.32.0"
alembic = ">=1.17.2,<2.0.0"
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.45,<3.0.0"}
pydantic-settings = ">=2.12.0,<3.0.0"
jinja2 = ">=3.1.6,<4.0.0"
aiogram = ">=3.24.0,<4.0.0"
httpx = ">=0.28.1,<0.29.0"
uvicorn = ">=0.40.0,<0.41.0"
aiosmtplib = ">=5.0.0,<6.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = "3.13"
namespace_packages = true
check_untyped_defs = true
show_error_codes = true
strict = true
ignore_missing_imports = true


[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "sqlalchemy.*",
    "asyncpg.*"
]
ignore_errors = true
ignore_missing_imports = true